--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "greece-amka",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Validation of a Greek social security number (AMKA)",
   "main": "index.js",
   "scripts": {
@@ -35,6 +35,10 @@
     "url": "https://github.com/greecejs/greece-amka/issues"
   },
   "homepage": "https://github.com/greecejs/greece-amka#readme",
+  "dependencies": {
+    "checkdigit": "1.1.1",
+    "moment": "2.11.2"
+  },
   "devDependencies": {
     "eslint": "^2.0.0-rc.0",
     "istanbul": "^0.4.2",
